cluster/coder.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: coder
